--- a/src/pages/acc/acc_traderpw/acc_traderpw_retrieve.html
+++ b/src/pages/acc/acc_traderpw/acc_traderpw_retrieve.html
@@ -25,15 +25,6 @@
         <div class="acc-traderpw">
             <h1 class="sub-item-hd">账号验证</h1>
             <div class="acc-traderpw-tell"></div>
-            <h1 class="sub-item-hd">请重设交易密码</h1>
-            <label class="input-item">
-                <span class="mark">交易密码</span>
-                <input type="password" class="flex pub-input" name="transactionPwd" placeholder="6位纯数字" maxlength="6">
-            </label>
-            <label class="input-item no-btborder">
-                <span class="mark">重复密码</span>
-                <input type="password" class="flex pub-input" name="reTransactionPwd" placeholder="再次确认交易密码" maxlength="6">
-            </label>
             <h1 class="sub-item-hd">请输入个人信息</h1>
             <label class="input-item">
                 <span class="mark">姓名</span>
@@ -48,8 +39,18 @@
                 <span class="mark">身份证号</span>
                 <input type="text" class="flex pub-input" name="idCard" id="idCard" data-flag="china" placeholder="请输入身份证号">
             </label>
+            <h1 class="sub-item-hd">请重设交易密码</h1>
+            <label class="input-item">
+                <span class="mark">交易密码</span>
+                <input type="password" class="flex pub-input" name="transactionPwd" placeholder="6位纯数字" maxlength="6">
+            </label>
+            <label class="input-item no-btborder">
+                <span class="mark">重复密码</span>
+                <input type="password" class="flex pub-input" name="reTransactionPwd" placeholder="再次确认交易密码" maxlength="6">
+            </label>
             <div class="tips">
-                <p class="mt-10">1.请务必如实填写正确的姓名以及对应的身份证号，当您忘记交易密码的时候，可用于找回交易密码</p>
+                <span >找回密码遇到问题？</span>
+                <p class="mt-10">1.身份证号和真实姓名是您设置交易密码时所填写的信息</p>
                 <p>2.如遇到其他问题可致电客服:18059287269</p>
             </div>
             <div class="pad-10 mt-10">
@@ -87,16 +88,8 @@
 <script type="text/javascript" src="//staticresources.qiniu.soqi.cn/wdy/js/common/zepto.min.js"></script>
 <script type="text/javascript" src="//staticresources.qiniu.soqi.cn/wdy/js/common/sea.js"></script>
 <script type="text/javascript" src="../../../assets/js/common/common.js"></script>
-<script type="text/javascript" src="//resources.soqi.cn/201808082200/mp/js/language/language.js?v=1533894291"></script>
-<!-- TODO !!! -->
-<!-- 国际化脚本地址 -->
 <script>
     seajs.use("acc/traderpw/traderpw_set");
-    execI18n(['common','acc_home'],['common','acc_home'],function(localize){
-                localize('body,title');
-                localize('#userName',{'name' : ''});
-                localize('#idCard',{'idCard' : ''});
-            });
 </script>
 </body>
 </html>
