--- a/src/pages/acc/acc_traderpw/acc_traderpw_set_success.html
+++ b/src/pages/acc/acc_traderpw/acc_traderpw_set_success.html
@@ -33,8 +33,8 @@
         <!--交易成功-->
         <div class="acc-traderpw-success mt-100">
             <i class="ic-pubfont ic-success"></i>
-            <p class="text mt-30">交易密码设置成功,请牢记！</p>
-            <a href="javascript:" class="pub-btn pub-btn-m pub-btn-stacked mt-50">返回" 我的钱包 "</a>
+            <p class="text mt-30" data-i18n="todo">交易密码设置成功,请牢记！</p>
+            <a href="javascript:" class="pub-btn pub-btn-m pub-btn-stacked mt-50"  data-i18n="todo">返回" 我的钱包 "</a>
         </div>
         <!--交易成功 end-->
     </div>
@@ -43,22 +43,26 @@
     {{if !setStatus}}
     <div class="acc-traderpw-set-success">
         <i class="ic-pubfont ic-closed"></i>
-        <p class="text mt-30">交易密码设置失败！</p>
-        <a href="javascript:" class="pub-btn pub-btn-m pub-btn-stacked pub-btn-disable mt-50">返回" 我的钱包 "</a>
+        <p class="text mt-30" data-i18n="todo">交易密码设置失败！</p>
+        <a href="javascript:" class="pub-btn pub-btn-m pub-btn-stacked pub-btn-disable mt-50" data-i18n="todo">返回" 我的钱包 "</a>
     </div>
     {{else}}
     <div class="acc-traderpw-set-success">
         <i class="ic-pubfont ic-success"></i>
-        <p class="text mt-30">交易密码设置成功,请牢记！</p>
-        <a href="javascript:" class="pub-btn pub-btn-m pub-btn-stacked mt-50">返回" 我的钱包 "</a>
+        <p class="text mt-30" data-i18n="todo">交易密码设置成功,请牢记！</p>
+        <a href="javascript:" class="pub-btn pub-btn-m pub-btn-stacked mt-50" data-i18n="todo">返回" 我的钱包 "</a>
     </div>
     {{/if}}
 </script>
 <script type="text/javascript" src="//staticresources.qiniu.soqi.cn/wdy/js/common/zepto.min.js"></script>
 <script type="text/javascript" src="//staticresources.qiniu.soqi.cn/wdy/js/common/sea.js"></script>
 <script type="text/javascript" src="../../../assets/js/common/common.js"></script>
+<script type="text/javascript" src="../../../assets/js/language/language.js"></script>
 <script>
     seajs.use("acc/traderpw/traderpw_set");
+    execI18n(['common','acc_home','acc_traderpw'],['common','acc_home','acc_traderpw'],function(localize){
+                localize('body,title');//配置语言包替换点
+            });
 </script>
 </body>
 </html>
