--- a/src/pages/acc/acc_traderpw/acc_traderpw_retrieve.html
+++ b/src/pages/acc/acc_traderpw/acc_traderpw_retrieve.html
@@ -22,74 +22,102 @@
 <div class="viewbox">
     <include src="../../common/header.html"></include>
     <div class="wrapbox">
-        <div class="acc-traderpw">
-            <h1 class="sub-item-hd">账号验证</h1>
+        <div class="acc-traderpw j-acc-traderpw-retrieve">
+            <h1 class="sub-item-hd" data-i18n="todo">账号验证</h1>
             <div class="acc-traderpw-tell"></div>
-            <h1 class="sub-item-hd">请输入个人信息</h1>
+            <h1 class="sub-item-hd" data-i18n="fillPersonalInfo">请输入个人信息</h1>
             <label class="input-item">
-                <span class="mark">姓名</span>
-                <input type="text" class="flex pub-input" name="name" placeholder="请输入真实姓名">
+                <span class="mark" data-i18n="setTransactionPwd.name">姓名</span>
+                <input type="text" class="flex pub-input" name="name" data-i18n="[placeholder]setTransactionPwd.fillName" id="userName">
             </label>
             <label class="input-item" data-action="shopPopArea">
-                <span class="mark">地区</span>
-                <div class="flex areaNamebox">中国</div>
-                <i claSs="ic-pubfont ic-down"></i>
+                <span class="mark"  data-i18n="region">地区</span>
+                <div class="flex areaNamebox" data-i18n="validDocumentation">请选择有效证件</div>
+                <i claSs="ic-pubfont ic-down"></i>      
             </label>
             <label class="input-item no-btborder">
-                <span class="mark">身份证号</span>
-                <input type="text" class="flex pub-input" name="idCard" id="idCard" data-flag="china" placeholder="请输入身份证号">
+                <span class="mark" data-i18n="idCard">身份证号</span>
+                <input type="text" class="flex pub-input" name="idCard" id="idCard" data-flag="china" data-i18n="[placeholder]fillIdCard">
             </label>
-            <h1 class="sub-item-hd">请重设交易密码</h1>
+            <h1 class="sub-item-hd" data-i18n="pleaseSetTradePwd">请重设交易密码</h1>
             <label class="input-item">
-                <span class="mark">交易密码</span>
-                <input type="password" class="flex pub-input" name="transactionPwd" placeholder="6位纯数字" maxlength="6">
+                <span class="mark" data-i18n="tradePwd">交易密码</span>
+                <input type="password" class="flex pub-input" name="transactionPwd"  maxlength="6" data-i18n="[placeholder]6Number">
             </label>
             <label class="input-item no-btborder">
-                <span class="mark">重复密码</span>
-                <input type="password" class="flex pub-input" name="reTransactionPwd" placeholder="再次确认交易密码" maxlength="6">
+                <span class="mark" data-i18n="repeatPwd">重复密码</span>
+                <input type="password" class="flex pub-input" name="reTransactionPwd" placeholder="再次确认交易密码" maxlength="6" data-i18n="[placeholder]confirmTradePwd">
             </label>
             <div class="tips">
-                <span >找回密码遇到问题？</span>
-                <p class="mt-10">1.身份证号和真实姓名是您设置交易密码时所填写的信息</p>
-                <p>2.如遇到其他问题可致电客服:18059287269</p>
+                <span data-i18n="findPwdMeetProblem">找回密码遇到问题？</span>
+                <p class="mt-10" data-i18n="`1、${idCardAndRealNameSameAs}`">1.身份证号和真实姓名是您设置交易密码时所填写的信息</p>
+                <p data-i18n="`2、${occurProblemCanCall}`">2.如遇到其他问题可致电客服:18059287269</p>
             </div>
             <div class="pad-10 mt-10">
-                <button class="pub-btn pub-btn-l pub-btn-stacked j-back-transaction-pwd">确认</button>
+                <button class="pub-btn pub-btn-l pub-btn-stacked j-back-transaction-pwd" data-i18n="confirm"></button>
             </div>
         </div>
+        <div class="acc-traderpw-area"></div>
     </div>
 </div>
 
 <script type="text/html" id="phoneData">
-     {{ if !internationalFg }}
+    {{ if internationalFg}}
      <div class="pub-list">
          <span class="mark tellIcon"></span>
          <div class="flex">
-             <p class="telNum"  data-tell="{{phone}}">您绑定的手机号为<em>{{phoneVal}}</em></p>
+             <p class="telNum"  data-tell="{{phone}}" data-i18n="mobilePhoneBinding">您绑定的手机号为<em>{{phoneVal}}</em></p>
          </div>
      </div>
-     <div class="input-item mt-10">
-         <span class="mark">验证码</span>
-         <input type="number" placeholder="请输入验证码" class="flex pub-input">
-         <button class="pub-btn pub-btn-s pub-btn-light" data-action="getIdentifyCodeBtn">获取验证码</button>
+     <div class="input-item mt-10 check-code-box">
+         <span class="mark" data-i18n="checkcode.checkcode">验证码</span>
+         <input type="number" placeholder="请输入验证码" class="flex pub-input check-code" name="checkCode" data-i18n="[placeholder]fillCaptcha">
+         <button class="pub-btn pub-btn-s pub-btn-light" data-action="getIdentifyCodeBtn" data-i18n="checkcode.getVC">获取验证码</button>
      </div>
-     <div class="acc-traderpw-tell-tips">收不到验证码？<em class="contactCode">联系客服</em></div>
+     <div class="acc-traderpw-tell-tips" data-i18n="noCaptcha">收不到验证码？<em class="contactCode" data-i18n="contactCustomerService">联系客服</em></div>
      {{else}}
      <div class="pub-list">
          <span class="mark tellIcon"></span>
          <div class="flex">
-             <p class="telNum" data-tell="{{phone}}">您绑定的手机号为<em>{{phoneVal}}</em></p>
+             <p class="telNum" data-tell="{{phone}}" data-i18n="mobilePhoneBinding">您绑定的手机号为<em>{{phoneVal}}</em></p>
          </div>
      </div>
-     <div class="acc-traderpw-tell-tips">收不到验证码？<em class="contactCode">联系客服</em></div>
+     <div class="input-item mt-10 check-code-box">
+        <span class="mark" data-i18n="checkcode.checkcode">验证码</span>
+        <input type="number" placeholder="请输入验证码" class="flex pub-input check-code" name="checkCode" data-i18n="[placeholder]fillCaptcha">
+        <button class="pub-btn pub-btn-s pub-btn-light" data-action="getIdentifyCodeBtn" data-i18n="checkcode.getVC">获取验证码</button>
+    </div>
+     <div class="acc-traderpw-tell-tips" data-i18n="region">短信验证仅支持国内用户，请您直接 <br/> <em class="contactCode" data-i18n="contactCustomerService">联系客服</em></div>
      {{/if}}
 </script>
 
+<script type="text/html" id="RegionsListData">
+    {{if Regionsflag}}
+    <div class="pop-coverbg " id="pop-areaboxMask"></div>
+    <div class="pop-areabox" id="pop-areabox" >
+        <ul>
+            {{each list value i}}
+            <li>
+                <!-- <span>{{value.addTime}}</span> -->
+                <em data-i18n="{{value.desc}}"></em>
+            </li>
+            {{/each}}
+        </ul>
+    </div>
+    {{/if}}
+</script>
+<input type="hidden" id="traderPasswordRetrieve" value="52">
 <script type="text/javascript" src="//staticresources.qiniu.soqi.cn/wdy/js/common/zepto.min.js"></script>
 <script type="text/javascript" src="//staticresources.qiniu.soqi.cn/wdy/js/common/sea.js"></script>
 <script type="text/javascript" src="../../../assets/js/common/common.js"></script>
+<script type="text/javascript" src="../../../assets/js/language/language.js"></script>
 <script>
     seajs.use("acc/traderpw/traderpw_set");
+    execI18n(['common','acc_home','acc_traderpw'],['common','acc_home','acc_traderpw'],function(localize){
+                localize('body,title');//配置语言包替换点
+                localize('#userName',{'name' : '*妮'});
+                localize('#idCard',{'idCard' : '**************3020'});
+            });
 </script>
 </body>
 </html>
