--- a/src/pages/acc/acc_traderpw/acc_traderpw_set.html
+++ b/src/pages/acc/acc_traderpw/acc_traderpw_set.html
@@ -22,38 +22,38 @@
 <div class="viewbox">
     <include src="../../common/header.html"></include>
     <div class="wrapbox">
-        <div class="acc-traderpw">
-            <h1 class="sub-item-hd">账号验证</h1>
+        <div class="acc-traderpw j-acc-traderpw-set">
+            <h1 class="sub-item-hd" data-i18n="todo">账号验证</h1>
             <div class="acc-traderpw-tell"></div>
-            <h1 class="sub-item-hd">请重设交易密码</h1>
+            <h1 class="sub-item-hd" data-i18n="pleaseSetTradePwd">请重设交易密码</h1>
             <label class="input-item">
-                <span class="mark">交易密码</span>
-                <input type="password" class="flex pub-input" name="transactionPwd" placeholder="6位纯数字" maxlength="6">
+                <span class="mark" data-i18n="tradePwd">交易密码</span>
+                <input type="password" class="flex pub-input" name="transactionPwd"  placeholder="请输入6位纯数字交易密码" maxlength="6" data-i18n="[placeholder]6Number">
             </label>
             <label class="input-item no-btborder">
-                <span class="mark">重复密码</span>
-                <input type="password" class="flex pub-input" name="reTransactionPwd" placeholder="再次确认交易密码" maxlength="6">
+                <span class="mark" data-i18n="repeatPwd">重复密码</span>
+                <input type="password" class="flex pub-input" name="reTransactionPwd" placeholder="再次确认交易密码" maxlength="6" data-i18n="[placeholder]confirmTradePwd">
             </label>
-            <h1 class="sub-item-hd">请输入个人信息</h1>
+            <h1 class="sub-item-hd" data-i18n="fillPersonalInfo">请输入个人信息</h1>
             <label class="input-item">
-                <span class="mark">姓名</span>
-                <input type="text" class="flex pub-input" name="name" placeholder="请输入真实姓名">
+                <span class="mark" data-i18n="name">姓名</span>
+                <input type="text" class="flex pub-input" name="name" placeholder="请输入真实姓名" data-i18n="[placeholder]fillRealName">
             </label>
             <label class="input-item" data-action="shopPopArea">
-                <span class="mark">地区</span>
-                <div class="flex areaNamebox">中国</div>
+                <span class="mark" data-i18n="region">地区</span>
+                <div class="flex areaNamebox" data-i18n="todo">请选择有效证件</div>
                 <i claSs="ic-pubfont ic-down"></i>
             </label>
             <label class="input-item no-btborder">
-                <span class="mark">身份证号</span>
-                <input type="text" class="flex pub-input" name="idCard" id="idCard" data-flag="china" placeholder="请输入身份证号">
+                <span class="mark" data-i18n="idCard">身份证号</span>
+                <input type="text" class="flex pub-input" name="idCard" id="idCard" data-flag="china" data-i18n="[placeholder]fillIdCard" placeholder="请输入身份证号">
             </label>
             <div class="tips">
-                <p class="mt-10">1.请务必如实填写正确的姓名以及对应的身份证号，当您忘记交易密码的时候，可用于找回交易密码</p>
-                <p>2.如遇到其他问题可致电客服:18059287269</p>
+                <p class="mt-10" data-i18n="`1、${importantNoteDesc}`">1.请务必如实填写正确的姓名以及对应的身份证号，当您忘记交易密码的时候，可用于找回交易密码</p>
+                <p data-i18n="`2、${occurProblemCanCall}`">2.如遇到其他问题可致电客服:18059287269</p>
             </div>
             <div class="pad-10 mt-10">
-                <button class="pub-btn pub-btn-l pub-btn-stacked j-back-transaction-pwd">确认</button>
+                <button class="pub-btn pub-btn-l pub-btn-stacked j-back-transaction-pwd" data-i18n="confirm">确认</button>
             </div>
         </div>
         <div class="acc-traderpw-area"></div>
@@ -61,27 +61,32 @@
 </div>
 
 <script type="text/html" id="phoneData">
-     {{ if !internationalFg }}
+    {{ if internationalFg}}
      <div class="pub-list">
          <span class="mark tellIcon"></span>
          <div class="flex">
-             <p class="telNum"  data-tell="{{phone}}">您绑定的手机号为<em>{{phoneVal}}</em></p>
+             <p class="telNum"  data-tell="{{phone}}" data-i18n="todo">您绑定的手机号为<em>{{phoneVal}}</em></p>
          </div>
      </div>
-     <div class="input-item mt-10">
-         <span class="mark">验证码</span>
-         <input type="number" placeholder="请输入验证码" class="flex pub-input">
-         <button class="pub-btn pub-btn-s pub-btn-light" data-action="getIdentifyCodeBtn">获取验证码</button>
+     <div class="input-item mt-10 check-code-box">
+         <span class="mark" data-i18n="todo">验证码</span>
+         <input type="number" data-i18n="[placeholder]todo" placeholder="请输入验证码" class="flex pub-input check-code" name="checkCode">
+         <button class="pub-btn pub-btn-s pub-btn-light" data-action="getIdentifyCodeBtn" data-i18n="todo">获取验证码</button>
      </div>
-     <div class="acc-traderpw-tell-tips">收不到验证码？<em class="contactCode">联系客服</em></div>
+     <div class="acc-traderpw-tell-tips" data-i18n="todo">收不到验证码？<em class="contactCode" data-i18n="todo">联系客服</em></div>
      {{else}}
      <div class="pub-list">
          <span class="mark tellIcon"></span>
          <div class="flex">
-             <p class="telNum" data-tell="{{phone}}">您绑定的手机号为<em>{{phoneVal}}</em></p>
+             <p class="telNum" data-tell="{{phone}}" data-i18n="todo">您绑定的手机号为<em>{{phoneVal}}</em></p>
          </div>
      </div>
-     <div class="acc-traderpw-tell-tips">收不到验证码？<em class="contactCode">联系客服</em></div>
+     <div class="input-item mt-10 check-code-box">
+        <span class="mark" data-i18n="todo">验证码</span>
+        <input type="number" data-i18n="[placeholder]todo" placeholder="请输入验证码" class="flex pub-input check-code" name="checkCode">
+        <button class="pub-btn pub-btn-s pub-btn-light" data-action="getIdentifyCodeBtn" data-i18n="todo">获取验证码</button>
+    </div>
+     <div class="acc-traderpw-tell-tips"  data-i18n="todo">短信验证仅支持国内用户，请您直接 <br/> <em class="contactCode" data-i18n="todo">联系客服</em></div>
      {{/if}}
 </script>
 
@@ -100,6 +105,7 @@
     </div>
     {{/if}}
 </script>
+<!-- <input type="hidden" id="traderPasswordId" value="52"> -->
 <script type="text/javascript" src="//staticresources.qiniu.soqi.cn/wdy/js/common/zepto.min.js"></script>
 <script type="text/javascript" src="//staticresources.qiniu.soqi.cn/wdy/js/common/sea.js"></script>
 <script type="text/javascript" src="../../../assets/js/common/common.js"></script>
