--- a/src/pages/common/header.html
+++ b/src/pages/common/header.html
@@ -1,36 +1,38 @@
 <header class="header">
-    <div class="topbar">
-        <a href="javascript:history.back();" class="topbar-fl"><i class="ic-pubfont ic-back"></i>返回</a>
-        <a href="javascript:" class="topbar-fr moremenu"><i class="ic-pubfont ic-more"></i></a>
-    </div>
-    <div class="topmenu pub-popbox">
-        <ul>
-            <li>
-                <a href="javascript:" >
-                    <span><i class="ic-pubfont ic-tpcard"></i></span>
-                    <p>我的名片</p>
-                </a>
-            </li>
-            <li>
-                <a href="javascript:" >
-                    <span><i class="ic-pubfont ic-tpsoqi"></i></span>
-                    <p>管理中心</p>
-                </a>
-            </li>
-            <li>
-                <a href="javascript:" class="j-message">
-                <span>
-                    <i class="ic-pubfont ic-tpnews"></i>
-                </span>
-                    <p>消息</p>
-                </a>
-            </li>
-            <li>
-                <a href="javascript:" >
-                    <span><i class="ic-pubfont ic-tpquit"></i></span>
-                    <p>退出</p>
-                </a>
-            </li>
-        </ul>
-    </div>
-</header>
+        <div class="topbar">
+            <a href="javascript:history.back();" class="topbar-fl"><i class="ic-pubfont ic-back"></i>返回</a>
+            <a href="javascript:" class="topbar-fr moremenu" id="moremenu"><i class="ic-pubfont ic-more"></i></a>
+        </div>
+        <div class="topmenu pub-popbox" id="topmenu">
+            <ul>
+                <li>
+                    <a href="javascript:" id="head-myCard">
+                        <span><i class="ic-pubfont ic-tpcard"></i></span>
+                        <p>我的名片</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="javascript:" id="head-soqi">
+                        <span><i class="ic-pubfont ic-tpsoqi"></i></span>
+                        <p>管理中心</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="javascript:" class="j-message" id="head-msg">
+                    <span>
+                        <i class="ic-pubfont ic-tpnews"></i>
+                    </span>
+                        <p>消息</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="javascript:"  id="head-exit">
+                        <span><i class="ic-pubfont ic-tpquit"></i></span>
+                        <p>退出</p>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </header>
+    
+    
