--- a/src/pages/acc/acc_traderpw/acc_traderpw_modify.html
+++ b/src/pages/acc/acc_traderpw/acc_traderpw_modify.html
@@ -23,65 +23,77 @@
     <include src="../../common/header.html"></include>
     <div class="wrapbox">
         <div class="acc-traderpw j-acc-traderpw-modify">
-            <h1 class="sub-item-hd" data-i18n="todo">账号验证</h1>
+            <h1 class="sub-item-hd" data-i18n="accountVerify"></h1>
             <div class="acc-traderpw-tell"></div>
-            <h1 class="sub-item-hd" data-i18n="setTradePwd">设置交易密码</h1>
+            <h1 class="sub-item-hd" data-i18n="setTradePwd"></h1>
             <label class="input-item">
-                <span class="mark" data-i18n="oldPwd">旧密码</span>
-                <input type="password" class="flex pub-input" name="oldpwd" data-i18n="[placeholder]fillOldPwd" placeholder="输入旧密码" maxlength="6">
+                <span class="mark" data-i18n="oldPwd"></span>
+                <input type="password" class="flex pub-input" name="oldpwd" data-i18n="[placeholder]fillOldPwd"  maxlength="6">
             </label>
             <label class="input-item mt-10">
-                <span class="mark" data-i18n="newPwd">新密码</span>
-                <input type="password" class="flex pub-input" name="newpwd" data-i18n="[placeholder]todo" placeholder="输入新密码6位数字" maxlength="6">
+                <span class="mark" data-i18n="newPwd"></span>
+                <input type="password" class="flex pub-input" name="newpwd" data-i18n="[placeholder]newSixPwd"  maxlength="6">
             </label>
             <label class="input-item no-btborder">
-                <span class="mark" data-i18n="confirmPwd">确认密码</span>
-                <input type="password" class="flex pub-input" name="renewpwd" data-i18n="[placeholder]todo" placeholder="输入确认密码6位数字" maxlength="6">
+                <span class="mark" data-i18n="confirmPwd"></span>
+                <input type="password" class="flex pub-input" name="renewpwd" data-i18n="[placeholder]confirmSixPwd"  maxlength="6">
             </label>            
             <div class="pad-10 mt-10">
-                <button class="pub-btn pub-btn-l pub-btn-stacked j-back-transaction-pwd" data-i18n="confirm">确认</button>
+                <button class="pub-btn pub-btn-l pub-btn-stacked j-back-transaction-pwd" data-i18n="confirm"></button>
             </div>
             <div class="acc-retrieve-password mt-10">
-                <a href="javascript:void(0)" data-i18n="todo">找回交易密码？</a>
+                <a href="javascript:void(0)" data-i18n="findTradePwd"></a>
             </div>
         </div>
     </div>
 </div>
 
 <script type="text/html" id="phoneData">
-     {{ if internationalFg }}
-     <div class="pub-list">
-         <span class="mark tellIcon"></span>
-         <div class="flex">
-             <p class="telNum"  data-tell="{{phone}}" data-i18n="todo">您绑定的手机号为<em>{{phoneVal}}</em></p>
-         </div>
-     </div>
-     <div class="input-item mt-10 check-code-box">
-         <span class="mark" data-i18n="todo">验证码</span>
-         <input type="number" data-i18n="[placeholder]todo" placeholder="请输入验证码" class="flex pub-input check-code" name="checkCode">
-         <button class="pub-btn pub-btn-s pub-btn-light" data-action="getIdentifyCodeBtn" data-i18n="todo">获取验证码</button>
-     </div>
-     <div class="acc-traderpw-tell-tips" data-i18n="todo">收不到验证码？<em class="contactCode" id="contactCode"  data-i18n="todo">联系客服</em></div>
-     {{else}}
-     <div class="pub-list">
-         <span class="mark tellIcon"></span>
-         <div class="flex">
-             <p class="telNum" data-tell="{{phone}}" data-i18n="todo">您绑定的手机号为<em>{{phoneVal}}</em></p>
-         </div>
-     </div>
-     <div class="input-item mt-10 check-code-box">
-        <span class="mark" data-i18n="todo">验证码</span>
-        <input type="number" data-i18n="[placeholder]todo" placeholder="请输入验证码" class="flex pub-input check-code" name="checkCode">
-        <button class="pub-btn pub-btn-s pub-btn-light" data-action="getIdentifyCodeBtn" data-i18n="todo">获取验证码</button>
+    {{ if internationalFg}}
+    <div class="pub-list">
+        <span class="mark tellIcon"></span>
+        <div class="flex">
+           <p class="telNum" >
+                <span data-i18n="yourBindPhone"></span>
+                <em data-tell="{{phone}}">{{phoneVal}}</em>
+           </p>
+        </div>
     </div>
-     <div class="acc-traderpw-tell-tips"  data-i18n="todo">短信验证仅支持国内用户，请您直接 <br/> <em class="contactCode" data-i18n="todo">联系客服</em></div>
-     {{/if}}
+    <div class="input-item mt-10 check-code-box">
+        <span class="mark" data-i18n="verifyCode.verifyCode"></span>
+        <input type="number" data-i18n="[placeholder]verifyCode.fillVerifyCode"  class="flex pub-input check-code" name="checkCode">
+        <button class="pub-btn pub-btn-s pub-btn-light" data-action="getIdentifyCodeBtn" data-i18n="verifyCode.getVerifyCode"></button>
+    </div>
+    <div class="acc-traderpw-tell-tips" >
+        <span data-i18n="cannotReceiveCode"></span>
+        <em class="contactCode" data-i18n="contactCustomerService"></em>
+   </div>
+    {{else}}
+    <div class="pub-list">
+        <span class="mark tellIcon"></span>
+        <div class="flex">
+           <p class="telNum" >
+               <span data-i18n="yourBindPhone"></span>
+               <em data-tell="{{phone}}">{{phoneVal}}</em>
+           </p>
+        </div>
+    </div>
+    <div class="input-item mt-10 check-code-box">
+       <span class="mark" data-i18n="verifyCode.verifyCode"></span>
+       <input type="number" data-i18n="[placeholder]verifyCode.fillVerifyCode" class="flex pub-input check-code" name="checkCode">
+       <button class="pub-btn pub-btn-s pub-btn-light" data-action="getIdentifyCodeBtn" data-i18n="verifyCode.getVerifyCode"></button>
+   </div>
+    <div class="acc-traderpw-tell-tips"  >
+        <span data-i18n="onlySupportChinaMainLand"></span>
+         <br/> <em class="contactCode" data-i18n="contactCustomerService"></em>
+       </div>
+    {{/if}}
 </script>
 
 <script type="text/javascript" src="//staticresources.qiniu.soqi.cn/wdy/js/common/zepto.min.js"></script>
 <script type="text/javascript" src="//staticresources.qiniu.soqi.cn/wdy/js/common/sea.js"></script>
 <script type="text/javascript" src="../../../assets/js/common/common.js"></script>
-<script type="text/javascript" src="../../../assets/js/language/language.js"></script>
+<script type="text/javascript" src="../../../assets/js/language/devolve/language.js"></script>
 <script>
     seajs.use("acc/traderpw/traderpw_modify");
     execI18n(['common','acc_home','acc_traderpw'],['common','acc_home','acc_traderpw'],function(localize){
