--- a/src/pages/acc/acc_traderpw/acc_traderpw_set.html
+++ b/src/pages/acc/acc_traderpw/acc_traderpw_set.html
@@ -23,37 +23,37 @@
     <include src="../../common/header.html"></include>
     <div class="wrapbox">
         <div class="acc-traderpw j-acc-traderpw-set">
-            <h1 class="sub-item-hd" data-i18n="todo">账号验证</h1>
+            <h1 class="sub-item-hd" data-i18n="accountVerify"></h1>
             <div class="acc-traderpw-tell"></div>
-            <h1 class="sub-item-hd" data-i18n="pleaseSetTradePwd">请重设交易密码</h1>
+            <h1 class="sub-item-hd" data-i18n="pleaseSetTradePwd"></h1>
             <label class="input-item">
-                <span class="mark" data-i18n="tradePwd">交易密码</span>
-                <input type="password" class="flex pub-input" name="transactionPwd"  placeholder="请输入6位纯数字交易密码" maxlength="6" data-i18n="[placeholder]6Number">
+                <span class="mark" data-i18n="tradePwd"></span>
+                <input type="password" class="flex pub-input" name="transactionPwd"  maxlength="6" data-i18n="[placeholder]6Number">
             </label>
             <label class="input-item no-btborder">
-                <span class="mark" data-i18n="repeatPwd">重复密码</span>
-                <input type="password" class="flex pub-input" name="reTransactionPwd" placeholder="再次确认交易密码" maxlength="6" data-i18n="[placeholder]confirmTradePwd">
+                <span class="mark" data-i18n="repeatPwd"></span>
+                <input type="password" class="flex pub-input" name="reTransactionPwd" maxlength="6" data-i18n="[placeholder]confirmTradePwd">
             </label>
-            <h1 class="sub-item-hd" data-i18n="fillPersonalInfo">请输入个人信息</h1>
+            <h1 class="sub-item-hd" data-i18n="fillPersonalInfo"></h1>
             <label class="input-item">
-                <span class="mark" data-i18n="name">姓名</span>
-                <input type="text" class="flex pub-input" name="name" placeholder="请输入真实姓名" data-i18n="[placeholder]fillRealName">
+                <span class="mark" data-i18n="name"></span>
+                <input type="text" class="flex pub-input" name="name"  data-i18n="[placeholder]fillRealName">
             </label>
             <label class="input-item" data-action="shopPopArea">
-                <span class="mark" data-i18n="region">地区</span>
-                <div class="flex areaNamebox" data-i18n="todo">请选择有效证件</div>
+                <span class="mark" data-i18n="region"></span>
+                <div class="flex areaNamebox" data-i18n="chooseValidCert"></div>
                 <i claSs="ic-pubfont ic-down"></i>
             </label>
             <label class="input-item no-btborder">
-                <span class="mark" data-i18n="idCard">身份证号</span>
-                <input type="text" class="flex pub-input" name="idCard" id="idCard" data-flag="china" data-i18n="[placeholder]fillIdCard" placeholder="请输入身份证号">
+                <span class="mark" data-i18n="idCard"></span>
+                <input type="text" class="flex pub-input" name="idCard" id="idCard" data-flag="china" data-i18n="[placeholder]setTransactionPwd.fillIDCard">
             </label>
             <div class="tips">
-                <p class="mt-10" data-i18n="`1、${importantNoteDesc}`">1.请务必如实填写正确的姓名以及对应的身份证号，当您忘记交易密码的时候，可用于找回交易密码</p>
-                <p data-i18n="`2、${occurProblemCanCall}`">2.如遇到其他问题可致电客服:18059287269</p>
+                <p class="mt-10" >1. <span data-i18n="importantNoteDesc"></span> </p>
+                <p>2. <span data-i18n="occurProblemCanCall"></span></p>
             </div>
             <div class="pad-10 mt-10">
-                <button class="pub-btn pub-btn-l pub-btn-stacked j-back-transaction-pwd" data-i18n="confirm">确认</button>
+                <button class="pub-btn pub-btn-l pub-btn-stacked j-back-transaction-pwd" data-i18n="confirm"></button>
             </div>
         </div>
         <div class="acc-traderpw-area"></div>
@@ -65,28 +65,40 @@
      <div class="pub-list">
          <span class="mark tellIcon"></span>
          <div class="flex">
-             <p class="telNum"  data-tell="{{phone}}" data-i18n="todo">您绑定的手机号为<em>{{phoneVal}}</em></p>
+            <p class="telNum" >
+                 <span data-i18n="yourBindPhone"></span>
+                 <em data-tell="{{phone}}">{{phoneVal}}</em>
+            </p>
          </div>
      </div>
      <div class="input-item mt-10 check-code-box">
-         <span class="mark" data-i18n="todo">验证码</span>
-         <input type="number" data-i18n="[placeholder]todo" placeholder="请输入验证码" class="flex pub-input check-code" name="checkCode">
-         <button class="pub-btn pub-btn-s pub-btn-light" data-action="getIdentifyCodeBtn" data-i18n="todo">获取验证码</button>
+         <span class="mark" data-i18n="verifyCode.verifyCode"></span>
+         <input type="number" data-i18n="[placeholder]verifyCode.fillVerifyCode"  class="flex pub-input check-code" name="checkCode">
+         <button class="pub-btn pub-btn-s pub-btn-light" data-action="getIdentifyCodeBtn" data-i18n="verifyCode.getVerifyCode"></button>
      </div>
-     <div class="acc-traderpw-tell-tips" data-i18n="todo">收不到验证码？<em class="contactCode" data-i18n="todo">联系客服</em></div>
+     <div class="acc-traderpw-tell-tips" >
+         <span data-i18n="cannotReceiveCode"></span>
+         <em class="contactCode" data-i18n="contactCustomerService"></em>
+    </div>
      {{else}}
      <div class="pub-list">
          <span class="mark tellIcon"></span>
          <div class="flex">
-             <p class="telNum" data-tell="{{phone}}" data-i18n="todo">您绑定的手机号为<em>{{phoneVal}}</em></p>
+            <p class="telNum" >
+                <span data-i18n="yourBindPhone"></span>
+                <em data-tell="{{phone}}">{{phoneVal}}</em>
+            </p>
          </div>
      </div>
      <div class="input-item mt-10 check-code-box">
-        <span class="mark" data-i18n="todo">验证码</span>
-        <input type="number" data-i18n="[placeholder]todo" placeholder="请输入验证码" class="flex pub-input check-code" name="checkCode">
-        <button class="pub-btn pub-btn-s pub-btn-light" data-action="getIdentifyCodeBtn" data-i18n="todo">获取验证码</button>
+        <span class="mark" data-i18n="verifyCode.verifyCode"></span>
+        <input type="number" data-i18n="[placeholder]verifyCode.fillVerifyCode" class="flex pub-input check-code" name="checkCode">
+        <button class="pub-btn pub-btn-s pub-btn-light" data-action="getIdentifyCodeBtn" data-i18n="verifyCode.getVerifyCode"></button>
     </div>
-     <div class="acc-traderpw-tell-tips"  data-i18n="todo">短信验证仅支持国内用户，请您直接 <br/> <em class="contactCode" data-i18n="todo">联系客服</em></div>
+     <div class="acc-traderpw-tell-tips"  >
+         <span data-i18n="onlySupportChinaMainLand"></span>
+          <br/> <em class="contactCode" data-i18n="contactCustomerService"></em>
+        </div>
      {{/if}}
 </script>
 
@@ -109,13 +121,15 @@
 <script type="text/javascript" src="//staticresources.qiniu.soqi.cn/wdy/js/common/zepto.min.js"></script>
 <script type="text/javascript" src="//staticresources.qiniu.soqi.cn/wdy/js/common/sea.js"></script>
 <script type="text/javascript" src="../../../assets/js/common/common.js"></script>
-<script type="text/javascript" src="../../../assets/js/language/language.js"></script>
+<script type="text/javascript" src="../../../assets/js/language/devolve/language.js"></script>
 <!-- TODO !!! -->
 <!-- 国际化脚本地址 -->
 <script>
     seajs.use("acc/traderpw/traderpw_set");
     execI18n(['common','acc_home','acc_traderpw'],['common','acc_home','acc_traderpw'],function(localize){
                 localize('body,title');//配置语言包替换点
+                // localize('#userName',{'name' : '*妮'});
+                // localize('#idCard',{'idCard' : '**************3020'});
             });
 </script>
 </body>
