--- a/src/pages/acc/acc_traderpw/acc_traderpw_set.html
+++ b/src/pages/acc/acc_traderpw/acc_traderpw_set.html
@@ -101,9 +101,9 @@
         </div>
      {{/if}}
 </script>
-
+<!-- 声明模板 -->
 <script type="text/html" id="RegionsListData">
-    {{if Regionsflag}}
+    {{if Regionsflag}} 
     <div class="pop-coverbg " id="pop-areaboxMask"></div>
     <div class="pop-areabox" id="pop-areabox" >
         <ul>
